IP settings CRUD added
