# routes/admin.js
@@ -5,6 +5,7 @@ const {getAllElection , createElection, updateElection, getOneElection, deleteEl
 const {getUser, updateUser, createUser, deleteUser} = require('../controllers/admin/user-controllers.js');
 const { generateQrCodes, getQRCodes, deleteAccessQR, getAccessCodes } = require("../controllers/admin/accessqr-controllers.js");
 const { getResults, deleteResults } = require("../controllers/admin/results.js");
+const { getSettingsFromDB, createSettings, updateSettings,deleteSettings } = require("../controllers/settings-controller.js");
 
 router.route('/election').get(getAllElection).post(createElection)
 router.route('/election/:id').get(getOneElection).patch(updateElection).delete(deleteElection)
@@ -15,5 +16,7 @@ router.route('/election/:id/generate-qr').post(generateQrCodes).get(getQRCodes).
 router.route('/election/tokens/:id').get(getAccessCodes)
 router.route('/election/:id/results').get(getResults).delete(deleteResults)
 
+router.route('/voter/settings').get(getSettingsFromDB).post(createSettings)
+router.route('/voter/settings/:id').patch(updateSettings).delete(deleteSettings)
 
 module.exports = router
