# swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: VoteESN-API
-  version: 1.4.0
+  version: 2.0.0
 servers:
   - url: https://voteesn-api.onrender.com/api/v1
 components:
@@ -19,6 +19,7 @@ tags:
   - name: Admin / election > Voter Access Tokens
   - name: Admin / election > Voter Access QR
   - name: Admin / election > Results
+  - name: Admin / election > IP Settings
 paths:
   /auth/register:
     post:
@@ -55,6 +56,76 @@ paths:
               example:
                 email: ''
                 password: ''
+      responses:
+        '200':
+          description: Successful response
+
+  /admin/voter/settings:
+    get:
+      tags:
+        - Admin / election > IP Settings
+      summary: Get IP Settings From DB
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+
+    post:
+        tags:
+          - Admin / election > IP Settings
+        summary: Create IP Settings
+        security:
+        - bearerAuth: []
+        requestBody:
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  - { "ipRestrictionEnabled": false }
+        responses:
+          '200':
+            description: Successful response
+
+  /admin/voter/settings{id}:          
+    patch:
+      tags:
+        - Admin / election > IP Settings
+      summary: Update IP Settings
+      security:
+      - bearerAuth: []
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: string
+        required: true
+        description: IP Setting ID
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                - { "ipRestrictionEnabled":true, "allowedIPs": ["123.456.789.22", "123.131.213.2" ]}
+      responses:
+        '200':
+          description: Successful response
+
+    delete:
+      tags:
+        - Admin / election > IP Settings
+      summary: Delete IP Settings
+      security:
+      - bearerAuth: []
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: string
+        required: true
+        description: IP Settings ID
       responses:
         '200':
           description: Successful response
